Update the public version

--- a/Part1_DataCleaning_FeatureEngineering.ipynb
+++ b/Part1_DataCleaning_FeatureEngineering.ipynb
@@ -69,9 +69,9 @@
       },
       "outputs": [],
       "source": [
-        "DATA_PATH = \"/content/drive/MyDrive/DSW/yelp_dataset\"\n",
-        "FEATURE_PATH = \"/content/drive/MyDrive/DSW/features\"\n",
-        "TRANSFORMED_FEATURE_PATH = \"/content/drive/MyDrive/DSW/transformed_features\""
+        "DATA_PATH = \"./yelp_dataset\"\n",
+        "FEATURE_PATH = \"./features\"\n",
+        "TRANSFORMED_FEATURE_PATH = \"./transformed_features\""
       ]
     },
     {
@@ -7124,7 +7124,9 @@
       "outputs": [],
       "source": [
         "# Save the train_df as the restaurant.csv\n",
-        "restaurant_features.to_csv(\"restaurant_features.csv\", index=False)"
+        "restaurant_features.to_csv(\n",
+        "    os.path.join(FEATURE_PATH, \"restaurant_features.csv\"), index=False\n",
+        ")"
       ]
     },
     {
@@ -9644,7 +9646,7 @@
       },
       "outputs": [],
       "source": [
-        "user_features.to_csv(\"user_features.csv\", index=False)"
+        "user_features.to_csv(os.path.join(FEATURE_PATH, \"user_features.csv\"), index=False)"
       ]
     },
     {
@@ -9664,7 +9666,7 @@
       },
       "outputs": [],
       "source": [
-        "review_df.to_csv('review_df.csv', index=False)"
+        "review_df.to_csv(os.path.join(FEATURE_PATH, 'review_df.csv'), index=False)"
       ]
     },
     {
@@ -10112,8 +10114,8 @@
       ],
       "source": [
         "# restaurant_features.to_csv('restaurant_features.csv')\n",
-        "restaurant_features = pd.read_csv('restaurant_features.csv')\n",
-        "# restaurant_features = pd.read_csv(os.path.join(FEATURE_PATH, 'restaurant_features.csv'))\n",
+        "# restaurant_features = pd.read_csv('restaurant_features.csv')\n",
+        "restaurant_features = pd.read_csv(os.path.join(FEATURE_PATH, 'restaurant_features.csv'))\n",
         "\n",
         "restaurant_features.head()"
       ]
@@ -10554,14 +10556,21 @@
       ],
       "source": [
         "# Create a mapping between the business_id and a set of integers\n",
-        "business_id_to_index = dict(zip(restaurant_features[\"business_id\"], list(restaurant_features.index)))\n",
+        "business_id_to_index = dict(\n",
+        "    zip(restaurant_features[\"business_id\"], list(restaurant_features.index))\n",
+        ")\n",
         "\n",
         "# Save it as a json\n",
-        "with open('business_id_to_index.json', 'w') as f:\n",
-        "    json.dump(business_id_to_index, f)\n",
+        "# with open(\"business_id_to_index.json\", \"w\") as f:\n",
+        "#     json.dump(business_id_to_index, f)\n",
         "\n",
-        "restaurant_features[\"business_id\"] = restaurant_features[\"business_id\"].map(business_id_to_index)\n",
-        "restaurant_features.to_csv('transformed_restaurant_features.csv', index=False)\n",
+        "restaurant_features[\"business_id\"] = restaurant_features[\"business_id\"].map(\n",
+        "    business_id_to_index\n",
+        ")\n",
+        "restaurant_features.to_csv(\n",
+        "    os.path.join(TRANSFORMED_FEATURE_PATH, \"transformed_restaurant_features.csv\"),\n",
+        "    index=False,\n",
+        ")\n",
         "\n",
         "restaurant_features.head()"
       ]
@@ -11251,8 +11260,8 @@
       ],
       "source": [
         "# user_features.to_csv('user_features.csv')\n",
-        "user_features = pd.read_csv('user_features.csv')\n",
-        "# user_features = pd.read_csv(os.path.join(FEATURE_PATH, 'user_features.csv'))\n",
+        "# user_features = pd.read_csv('user_features.csv')\n",
+        "user_features = pd.read_csv(os.path.join(FEATURE_PATH, 'user_features.csv'))\n",
         "\n",
         "user_features"
       ]
@@ -11703,12 +11712,14 @@
         "user_id_to_index = dict(zip(user_features[\"user_id\"], list(user_features.index)))\n",
         "\n",
         "# Save it as a json\n",
-        "with open('user_id_to_index.json', 'w') as f:\n",
-        "    json.dump(user_id_to_index, f)\n",
+        "# with open(\"user_id_to_index.json\", \"w\") as f:\n",
+        "#     json.dump(user_id_to_index, f)\n",
         "\n",
         "\n",
         "user_features[\"user_id\"] = user_features[\"user_id\"].map(user_id_to_index)\n",
-        "user_features.to_csv('transformed_user_features.csv', index=False)\n",
+        "user_features.to_csv(\n",
+        "    os.path.join(TRANSFORMED_FEATURE_PATH, \"transformed_user_features.csv\"), index=False\n",
+        ")\n",
         "\n",
         "user_features.head()"
       ]
@@ -12142,8 +12153,8 @@
       ],
       "source": [
         "# review_df.to_csv('review_df.csv')\n",
-        "review_df = pd.read_csv('review_df.csv')\n",
-        "# review_df = pd.read_csv(os.path.join(FEATURE_PATH, 'review_df.csv'))\n",
+        "# review_df = pd.read_csv('review_df.csv')\n",
+        "review_df = pd.read_csv(os.path.join(FEATURE_PATH, 'review_df.csv'))\n",
         "\n",
         "review_df"
       ]
@@ -12461,15 +12472,17 @@
         "review_id_to_index = dict(zip(review_df[\"review_id\"], list(review_df.index)))\n",
         "\n",
         "# Save it as a json\n",
-        "with open('review_id_to_index.json', 'w') as f:\n",
-        "    json.dump(review_id_to_index, f)\n",
+        "# with open(\"review_id_to_index.json\", \"w\") as f:\n",
+        "#     json.dump(review_id_to_index, f)\n",
         "\n",
         "\n",
         "review_df[\"review_id\"] = review_df[\"review_id\"].map(review_id_to_index)\n",
         "review_df[\"user_id\"] = review_df[\"user_id\"].map(user_id_to_index)\n",
         "review_df[\"business_id\"] = review_df[\"business_id\"].map(business_id_to_index)\n",
         "\n",
-        "review_df.to_csv('transformed_review_df.csv', index=False)\n",
+        "review_df.to_csv(\n",
+        "    os.path.join(TRANSFORMED_FEATURE_PATH, \"transformed_review_df.csv\"), index=False\n",
+        ")\n",
         "\n",
         "review_df.head()"
       ]
@@ -12792,219 +12805,18 @@
       "source": [
         "# Randomly sample 10% of the review from review_df\n",
         "review_df_sample = review_df.sample(frac=0.1, random_state=42)\n",
-        "review_df_sample.to_csv('review_df_sample.csv', index=False)\n",
+        "review_df_sample.to_csv(\n",
+        "    os.path.join(TRANSFORMED_FEATURE_PATH, \"review_df_sample.csv\"), index=False\n",
+        ")\n",
         "\n",
         "print(review_df_sample.shape)\n",
         "review_df_sample.head()"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3nZJVotv45ZD"
-      },
-      "source": [
-        "## 5. Predictive Modeling\n",
-        "\n",
-        "See this colab notebook [link](https://colab.research.google.com/drive/17ofUzxU5vmbRhKM-Uo1a8B2biFkBqYRg?usp=sharing)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jERhsGZti4KJ"
-      },
-      "source": [
-        "<!-- ### 1. Content-based Filtering\n",
-        "\n",
-        "\n",
-        "This method recommends items similar to those a user has liked in the past, based on item features. -->"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "JHLpdxqx9pSL"
-      },
-      "outputs": [],
-      "source": [
-        "# train_df = pd.read_csv(os.path.join(TRANSFORMED_FEATURE_PATH, 'transformed_restaurant_features.csv'))\n",
-        "# train_df.head()"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "axoavToU5BYH"
-      },
-      "outputs": [],
-      "source": [
-        "# X = train_df.drop(columns=[\"stars\"])\n",
-        "# print(X.shape)\n",
-        "\n",
-        "# y = train_df[\"stars\"]\n",
-        "# print(y.shape)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "e-DsHg6PjFfs"
-      },
-      "outputs": [],
-      "source": [
-        "# # Train/test split\n",
-        "# from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WDv-4AIsjKdF"
-      },
-      "outputs": [],
-      "source": [
-        "# # Linear regression\n",
-        "# from sklearn.linear_model import LinearRegression\n",
-        "\n",
-        "# lr = LinearRegression()\n",
-        "# lr.fit(X_train, y_train)\n",
-        "\n",
-        "# # Print the performance on the train and test sets\n",
-        "# print(\"Train set performance:\")\n",
-        "# print(\"R^2:\", lr.score(X_train, y_train))\n",
-        "\n",
-        "# print()\n",
-        "\n",
-        "# print(\"Test set performance:\")\n",
-        "# print(\"R^2:\", lr.score(X_test, y_test))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "8TpuHaj8j8LN"
-      },
-      "outputs": [],
-      "source": [
-        "# # Random forest regressor\n",
-        "# from sklearn.ensemble import RandomForestRegressor\n",
-        "\n",
-        "# rf = RandomForestRegressor()\n",
-        "# rf.fit(X_train, y_train)\n",
-        "\n",
-        "# print(\"Train set performance:\")\n",
-        "# print(\"R^2:\", rf.score(X_train, y_train))\n",
-        "\n",
-        "# print()\n",
-        "\n",
-        "# print(\"Test set performance:\")\n",
-        "# print(\"R^2:\", rf.score(X_test, y_test))\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0dYzVfqYkUmH"
-      },
-      "source": [
-        "At this stage, we only experiment with two basic models for regression with the basic feature engineering applied to the data. The results is far from desirable.\n",
-        "\n",
-        "The problem of the Content-Based Filtering Method is that it doesn't capture any information about users' preferences since it only cares about restaurant features."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aw_FJJT6iIBC"
-      },
-      "source": [
-        "### Collabarative Filtering"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0hvkOpeOnz2h"
-      },
-      "source": [
-        "#### Model-Based Collaborative Filtering\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "JBjuxfAun7Vu"
-      },
-      "outputs": [],
-      "source": [
-        "# !pip install scikit-surprise"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "bH1XkNEun3cJ"
-      },
-      "outputs": [],
-      "source": [
-        "# from surprise import Dataset, Reader, KNNBasic\n",
-        "# from surprise.model_selection import train_test_split\n",
-        "# from surprise import accuracy"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "mxlAXdITn089"
-      },
-      "outputs": [],
-      "source": [
-        "# reader = Reader(rating_scale=(1, 5))\n",
-        "# data = Dataset.load_from_df(review_df_sample[['user_id', 'business_id', 'stars']], reader)\n",
-        "# trainset, testset = train_test_split(data, test_size=0.25)\n",
-        "\n",
-        "# # Use KNNBasic for user-based collaborative filtering\n",
-        "# sim_options = {\n",
-        "#     'name': 'cosine',\n",
-        "#     'user_based': True  # Compute similarities between users\n",
-        "# }\n",
-        "# algo = KNNBasic(sim_options=sim_options)\n",
-        "\n",
-        "# # Train the algorithm on the trainset, and predict ratings for the testset\n",
-        "# algo.fit(trainset)\n",
-        "# predictions = algo.test(testset)\n",
-        "\n",
-        "# # Calculate and print the RMSE\n",
-        "# accuracy.rmse(predictions)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cP-H0ny75Fua"
-      },
-      "source": [
-        "## 6. Evaluation"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "K5bgbjsS5GrX"
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     }
