--- a/Part2_Modeling.ipynb
+++ b/Part2_Modeling.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Part 2. Modeling\n",
         "\n",
-        "See other steps of the project: [notebook](https://colab.research.google.com/drive/1s0XYX2Rs55jqJtCglGXmHeakkTGe-5ha?usp=sharing)"
+        "<!-- See other steps of the project: [notebook](https://colab.research.google.com/drive/1s0XYX2Rs55jqJtCglGXmHeakkTGe-5ha?usp=sharing) -->"
       ]
     },
     {
@@ -199,9 +199,9 @@
       },
       "outputs": [],
       "source": [
-        "DATA_PATH = \"/content/drive/MyDrive/DSW/yelp_dataset\"\n",
-        "FEATURE_PATH = \"/content/drive/MyDrive/DSW/features\"\n",
-        "TRANSFORMED_FEATURE_PATH = \"/content/drive/MyDrive/DSW/transformed_features\""
+        "DATA_PATH = \"./yelp_dataset\"\n",
+        "FEATURE_PATH = \"./features\"\n",
+        "TRANSFORMED_FEATURE_PATH = \"./transformed_features\""
       ]
     },
     {
